# modbus-adapter

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  config.schema.json  gdk-config.json  main.py  pyproject.toml  recipe.yaml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml  deploy-docs.yml
docs/: README.md  explanation.md  how-to-guides.md  sample-configurations.md  tutorial.md
docs/reference/: configuration.md  data-types.md  messaging-interface.md  metrics.md
k8s/: configmap.yaml  deployment.yaml
modbus_adapter/: __init__.py  codec.py  command_service.py  connection.py  device.py  events.py  health.py  metrics.py  pause.py  poll_manager.py  publisher.py
modbus_adapter/config/: __init__.py  connection_info.py  deadband_spec.py  poll_group.py  server_configuration.py  signal_spec.py  tag_spec.py
tests/: _fakes.py  test_coalesce.py  test_codec.py  test_commands.py  test_config.py  test_connection_liveness.py  test_health.py  test_operational_metrics.py  test_publish_events.py
validation/: README.md  config-multi.json  config.json  messaging-local.json  modbus_sim_server.py  validate.py  validate_multi.py  validate_suite.py
