[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gg-modbus-adapter"
version = "1.0.0"
description = "GGCommons Modbus southbound adapter — the Python reference protocol adapter"
requires-python = ">=3.9"
dependencies = [
    # Interim pin: the feat/unified-namespace branch (UNS not yet merged to main / no tag). Re-pin to
    # the released tag (e.g. @python-lib/v0.2.0) once it lands — see requirements.txt. Local dev uses
    # the sibling working tree via `pip install -e ../ggcommons/libs/python`.
    "greengrass-commons @ git+https://github.com/edgecommons/ggcommons.git@python-lib/v0.2.0#subdirectory=libs/python",
    "pymodbus>=3.6",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov", "paho-mqtt>=2.0"]

[tool.setuptools]
packages = ["modbus_adapter", "modbus_adapter.config"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# The org 90% coverage gate, scoped to the CI-testable surface (see .coveragerc; live-infra modules
# connection.py/device.py are validated by the validation/ HOST smoke). The reusable component CI runs
# `python -m pytest`, so the gate rides in addopts. When iterating on a single file, add `--no-cov`.
addopts = "-q --cov=modbus_adapter --cov-report=term-missing --cov-fail-under=90"
